apps/gitops/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops
  namespace: flux-system
spec:
  ingressClassName: nginx
  rules:
    - host: ${GITOPS_INGRESS_HOST:=gitops.example.com}
      http:
        paths:
          - backend:
              service:
                name: gitops
                port:
                  number: 9001
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - ${GITOPS_INGRESS_HOST:=gitops.example.com}
